Wrap up upgrade fixes. Moved to beta 2.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -57,8 +57,3 @@ h1,h2,h3,h4 {
   padding-top: 2.5em;
   padding-bottom: 5em;
 }
-
-
-.step-content {
-  padding: 24px;
-}
